added my login to infobox

--- a/mapchat/index.html
+++ b/mapchat/index.html
@@ -65,7 +65,7 @@
 				// Create a marker
 				marker = new google.maps.Marker({
 					position: me,
-					title: message,
+					title: login+": "+message,
 					icon: "xtina.png",
 				});
 				marker.setMap(map);
