--- a/mapchat/index.html
+++ b/mapchat/index.html
@@ -81,7 +81,7 @@
 			var login = "SheriMcKelvey";
 			var message = "Too dirrty to clean my act up";
 			var params = "login="+login+"&lat="+myLat+"&lng="+myLng+"&message="+message;
-			var url = "https://secret-about-box.herokuapp.com/sendLocation";
+			var url = "https://pacific-crag-7478.herokuapp.com/sendLocation";
 			http.open("POST", url, true);
 			http.setRequestHeader("Content-type", "application/x-www-form-urlencoded");
 
