--- a/mapchat/index.html
+++ b/mapchat/index.html
@@ -81,6 +81,7 @@
 			var login = "SheriMcKelvey";
 			var message = "Too dirrty to clean my act up";
 			var params = "login="+login+"&lat="+myLat+"&lng="+myLng+"&message="+message;
+			//new URL added
 			var url = "https://pacific-crag-7478.herokuapp.com/sendLocation";
 			http.open("POST", url, true);
 			http.setRequestHeader("Content-type", "application/x-www-form-urlencoded");
